--- a/index.html
+++ b/index.html
@@ -60,10 +60,20 @@
                     </div>
                 </div>
             </div>
+            <div class="main-2">
+                <div class="ripple"></div>
+                <h2></h2>
+            </div>
+            <div class="main-1-02">
+                <div class="ripple-1" id="ripple-1">
+                    <span>确定</span>
+                    <div class="ripple-1-1" id="ripple-1-1"></div>
+                </div>
+            </div>
 
         </main>
     </div>
     <script rel="script" src="./main.js"></script>
-    <script rel="script" src="//at.alicdn.com/t/font_2115061_6lag1wt4xjw.js"></script>
+    <script rel="script" src="//at.alicdn.com/t/font_2115061_v3160g0dlor.js"></script>
 </body>
 </html>
