涟漪按钮-横向

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
                 <div class="ripple-1" id="ripple-1">
                     <span>确定</span>
                 </div>
+                <div class="ripple-1" id="ripple-2">
+                    <span>确定</span>
+                </div>
             </div>
         </main>
     </div>
