--- a/index.html
+++ b/index.html
@@ -69,12 +69,50 @@
                     <span>确定</span>
                 </div>
                 <div class="ripple-1" id="ripple-2">
-                    <span>确定</span>
+                    <span>进入</span>
                 </div>
             </div>
+            <div class="main-3">
+                <div class="" id="">
+                    <svg class="icon main-3-01" aria-hidden="true">
+                        <use xlink:href="#icon-qiehuan"></use>
+                    </svg>
+                </div>
+                <h2>切换页面</h2>
+            </div>
+            <div class="main-3-02">
+                <div class="main-3-03">
+                    <div class="main-3-04">
+                        <img src="./img/smartisanlog.png" alt="">
+                    </div>
+                    <ul class="nav-3">
+                        <li class="nav-3-1 main-3-active" id="nav-3-1">首页</li>
+                        <li class="nav-3-2" id="nav-3-2">购物车</li>
+                        <li class="nav-3-3" id="nav-3-3">待付款</li>
+                        <li class="nav-3-4" id="nav-3-4">个人中心</li>
+                        <li class="nav-3-5" id="nav-3-5">售后</li>
+                    </ul>
+                    <div class="container1 main-3-active1" id="container1">
+                       <span>这是首页</span>
+                    </div>
+                    <div class="container2" id="container2">
+                        <span>这是购物车页面</span>
+                    </div>
+                    <div class="container3" id="container3">
+                        <span>这是待付款页面</span>
+                    </div>
+                    <div class="container4" id="container4">
+                        <span>这是个人中心页面</span>
+                    </div>
+                    <div class="container5" id="container5">
+                        <span>这是售后页面</span>
+                    </div>
+                </div>
+            </div>
+
         </main>
     </div>
     <script rel="script" src="./main.js"></script>
-    <script rel="script" src="//at.alicdn.com/t/font_2115061_v3160g0dlor.js"></script>
+    <script rel="script" src="//at.alicdn.com/t/font_2115061_367e8izirzq.js"></script>
 </body>
 </html>
